--- a/inventory_project/templates/base.html
+++ b/inventory_project/templates/base.html
@@ -10,7 +10,7 @@
   <style>
     body {
       font-family: 'Segoe UI', sans-serif;
-      background-image: linear-gradient(to right, red , blue);
+      background-image: linear-gradient(to right, rgb(32, 205, 98) ,rgb(32, 205, 179));
     }
     .navbar {
       background-color: #343a40;
